Update translations to update the German ones (so sorry about that)

--- a/src/po/da_DK/digitail.po
+++ b/src/po/da_DK/digitail.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://github.com/MasterTailer/CRUMPET/issues\n"
-"POT-Creation-Date: 2023-07-20 13:37+0100\n"
-"PO-Revision-Date: 2023-07-20 14:04+0100\n"
+"POT-Creation-Date: 2023-07-20 14:30+0100\n"
+"PO-Revision-Date: 2023-07-20 14:31+0100\n"
 "Last-Translator: Dan Leinir Turthra Jensen <admin@leinir.dk>\n"
 "Language-Team: English <kde-i18n-doc@kde.org>\n"
 "Language: en_GB\n"
@@ -101,8 +101,8 @@ msgid ""
 "An error occured while connecting to your DIGITAiL (the service object could "
 "not be created). If you feel this is in error, please try again!"
 msgstr ""
-"Det opstod en fej under forbindelsen til din DIGITAiL (service objektet kunne "
-"ikke skabes). Hvid du tror dette er en fejl, forsøg igen!"
+"Det opstod en fej under forbindelsen til din DIGITAiL (service objektet "
+"kunne ikke skabes). Hvid du tror dette er en fejl, forsøg igen!"
 
 #: gearimplementations/GearDigitail.cpp:276
 msgctxt "Warning that some unknown error happened"
@@ -126,7 +126,8 @@ msgid ""
 "Failed to connect to your DIGITAiL. Please try again (perhaps move it "
 "closer?)"
 msgstr ""
-"Kunne ikke forbinde til din DIGITAiL. Forsøg igen (måske skal den tættere på?)"
+"Kunne ikke forbinde til din DIGITAiL. Forsøg igen (måske skal den tættere "
+"på?)"
 
 #: gearimplementations/GearDigitail.cpp:302
 msgctxt ""
@@ -366,9 +367,9 @@ msgid ""
 "Your gear has reported a hardware revision that we do not know of. This "
 "means that your app is likely to be out of date and needs to be updated."
 msgstr ""
-"Dit udstyr siger det har en udgave af hardwaret vi ikke kender til. Dette"
-" betyder mest sandsyligt at din app er uddateret og trænger til en"
-" opgradering. Fortæl venligst The Tail Company om denne fejl."
+"Dit udstyr siger det har en udgave af hardwaret vi ikke kender til. Dette "
+"betyder mest sandsyligt at din app er uddateret og trænger til en "
+"opgradering. Fortæl venligst The Tail Company om denne fejl."
 
 #: gearimplementations/GearEars.cpp:799
 msgctxt ""
@@ -380,11 +381,11 @@ msgid ""
 "a highly unexpected situation and we would appreciate it if you reported it "
 "directly to us at info@thetailcompany.com - thank you!"
 msgstr ""
-"Det er lykkedes dig at anskaffe en firmware version som ikke rapporterer dine"
-" øres hardware udgave, men som også ikke er kendt af os som en udgave som"
-" opfører sig sådan. Dette er en højst uvented situation og vi ville meget"
-" gerne, om du ville tage kontakt of fortælle os om det ved at tage direkte"
-" kontakt til contact@thetailcompany.com - på forhånd tak!"
+"Det er lykkedes dig at anskaffe en firmware version som ikke rapporterer "
+"dine øres hardware udgave, men som også ikke er kendt af os som en udgave "
+"som opfører sig sådan. Dette er en højst uvented situation og vi ville meget "
+"gerne, om du ville tage kontakt of fortælle os om det ved at tage direkte "
+"kontakt til contact@thetailcompany.com - på forhånd tak!"
 
 #: gearimplementations/GearEars.cpp:827
 #: gearimplementations/GearFlutterWings.cpp:696
@@ -473,10 +474,9 @@ msgid ""
 "device writing characteristic). If you are certain that it definitely is, "
 "please report this error to The Tail Company."
 msgstr ""
-"Det ser ud som om dette ikke er FlutterWings (kunne ikke finde enhedens"
-" primære "
-"skrivekarakteristik). Hvis du er sikker på det er, tag kontakt til The Tail "
-"Company med denne fejl."
+"Det ser ud som om dette ikke er FlutterWings (kunne ikke finde enhedens "
+"primære skrivekarakteristik). Hvis du er sikker på det er, tag kontakt til "
+"The Tail Company med denne fejl."
 
 #: gearimplementations/GearFlutterWings.cpp:117
 msgctxt ""
@@ -487,10 +487,9 @@ msgid ""
 "device reading characteristic). If you are certain that it definitely is, "
 "please report this error to The Tail Company."
 msgstr ""
-"Det ser ud som om dette ikke er FlutterWings (kunne ikke finde enhedens"
-" primære "
-"læsekarakteristik). Hvis du er sikker på det er, tag kontakt til The Tail "
-"Company med denne fejl."
+"Det ser ud som om dette ikke er FlutterWings (kunne ikke finde enhedens "
+"primære læsekarakteristik). Hvis du er sikker på det er, tag kontakt til The "
+"Tail Company med denne fejl."
 
 #: gearimplementations/GearFlutterWings.cpp:407
 msgctxt "Warning message when a fault occurred during a connection attempt"
@@ -528,10 +527,9 @@ msgid ""
 "An error occurred while connecting to your FlutterWings (the battery service "
 "was not available). If you feel this is in error, please try again!"
 msgstr ""
-"Der opstod en fejl mens vi forsøgte at forbinde til dine FlutterWings"
-" (batteri "
-"informations servicen var ikke tilgængelig). Hvis du tror dette er en fejl, "
-"prøv igen!"
+"Der opstod en fejl mens vi forsøgte at forbinde til dine FlutterWings "
+"(batteri informations servicen var ikke tilgængelig). Hvis du tror dette er "
+"en fejl, prøv igen!"
 
 #: gearimplementations/GearFlutterWings.cpp:487
 msgctxt ""
@@ -541,10 +539,9 @@ msgid ""
 "level characteristic). If you are certain that it definitely is, please "
 "report this error to The Tail Company."
 msgstr ""
-"Det ser ud som om dette ikke er FlutterWings (kunne ikke finde enhedens"
-" batteri "
-"karakteristik). Hvis du er sikker på det er, tag kontakt til The Tail "
-"Company med denne fejl."
+"Det ser ud som om dette ikke er FlutterWings (kunne ikke finde enhedens "
+"batteri karakteristik). Hvis du er sikker på det er, tag kontakt til The "
+"Tail Company med denne fejl."
 
 #: gearimplementations/GearFlutterWings.cpp:527
 msgctxt "Warning that some unknown error happened"
@@ -552,9 +549,8 @@ msgid ""
 "An error occurred. If you are trying to connect to your FlutterWings, make "
 "sure it is on and close to this device."
 msgstr ""
-"Det opstod en fejl. Hvis du er ved at forsøge at forbinde til dine"
-" FlutterWings, vær "
-"sikker på, at de er tændt, og er tæt på denne enhed."
+"Der opstod en fejl. Hvis du er ved at forsøge at forbinde til dine "
+"FlutterWings, vær sikker på, at de er tændt, og er tæt på denne enhed."
 
 #: gearimplementations/GearFlutterWings.cpp:530
 msgctxt "Warning that the device disconnected itself"
@@ -569,8 +565,8 @@ msgid ""
 "Failed to connect to your FlutterWings. Please try again (perhaps move it "
 "closer?)"
 msgstr ""
-"Kunne ikke forbinde til dine Flutterwings. Forsøg igen (måske skal de tættere"
-" på?)"
+"Kunne ikke forbinde til dine Flutterwings. Forsøg igen (måske skal de "
+"tættere på?)"
 
 #: gearimplementations/GearFlutterWings.cpp:561
 #: gearimplementations/GearMitail.cpp:567
@@ -602,9 +598,8 @@ msgid ""
 "The FlutterWings closed the connection, either by being turned off or losing "
 "power. Remember to charge your tail!"
 msgstr ""
-"FlutterWings lukkede forbindelsen, enten ved at blive slukket eller ved at"
-" løbe tør "
-"for strøm. Husk at oplade dine vinger!"
+"FlutterWings lukkede forbindelsen, enten ved at blive slukket eller ved at "
+"løbe tør for strøm. Husk at oplade dine vinger!"
 
 #: gearimplementations/GearFlutterWings.cpp:729
 #: gearimplementations/GearMitail.cpp:735
@@ -631,11 +626,10 @@ msgid ""
 "the newest firmware which fixes them! Head over to Settings and find the "
 "Firmware section to perform the update."
 msgstr ""
-"Din MiTail har firmware version 4.0.3 installeret, hvilket er uddateret og"
-" har "
-"nogle kendte problemer! Vi vi <b>kraftigt anbefale</b> at du opgraderer det "
-"til den nyeste firmware, som fikser problemerne. Smut over til Indstillinger "
-"og find Firmware afdelingen for at installere opdateringen."
+"Din MiTail har firmware version 4.0.3 installeret, hvilket er uddateret og "
+"har nogle kendte problemer! Vi vi <b>kraftigt anbefale</b> at du opgraderer "
+"det til den nyeste firmware, som fikser problemerne. Smut over til "
+"Indstillinger og find Firmware afdelingen for at installere opdateringen."
 
 #: gearimplementations/GearMitail.cpp:40
 msgctxt ""
@@ -647,11 +641,10 @@ msgid ""
 "the newest firmware which fixes them! Head over to Settings and find the "
 "Firmware section to perform the update."
 msgstr ""
-"Din MiTail har firmware version 4.0.2 installeret, hvilket er uddateret og"
-" har "
-"nogle kendte problemer! Vi vi <b>kraftigt anbefale</b> at du opgraderer det "
-"til den nyeste firmware, som fikser problemerne. Smut over til Indstillinger "
-"og find Firmware afdelingen for at installere opdateringen."
+"Din MiTail har firmware version 4.0.2 installeret, hvilket er uddateret og "
+"har nogle kendte problemer! Vi vi <b>kraftigt anbefale</b> at du opgraderer "
+"det til den nyeste firmware, som fikser problemerne. Smut over til "
+"Indstillinger og find Firmware afdelingen for at installere opdateringen."
 
 #: gearimplementations/GearMitail.cpp:41
 msgctxt ""
@@ -663,11 +656,10 @@ msgid ""
 "the newest firmware which fixes them! Head over to Settings and find the "
 "Firmware section to perform the update."
 msgstr ""
-"Din MiTail har firmware version 4.0.1 installeret, hvilket er uddateret og"
-" har "
-"nogle kendte problemer! Vi vi <b>kraftigt anbefale</b> at du opgraderer det "
-"til den nyeste firmware, som fikser problemerne. Smut over til Indstillinger "
-"og find Firmware afdelingen for at installere opdateringen."
+"Din MiTail har firmware version 4.0.1 installeret, hvilket er uddateret og "
+"har nogle kendte problemer! Vi vi <b>kraftigt anbefale</b> at du opgraderer "
+"det til den nyeste firmware, som fikser problemerne. Smut over til "
+"Indstillinger og find Firmware afdelingen for at installere opdateringen."
 
 #: gearimplementations/GearMitail.cpp:42
 msgctxt ""
@@ -679,11 +671,10 @@ msgid ""
 "the newest firmware which fixes them! Head over to Settings and find the "
 "Firmware section to perform the update."
 msgstr ""
-"Din MiTail har firmware version 4.0.0 installeret, hvilket er uddateret og"
-" har "
-"nogle kendte problemer! Vi vi <b>kraftigt anbefale</b> at du opgraderer det "
-"til den nyeste firmware, som fikser problemerne. Smut over til Indstillinger "
-"og find Firmware afdelingen for at installere opdateringen."
+"Din MiTail har firmware version 4.0.0 installeret, hvilket er uddateret og "
+"har nogle kendte problemer! Vi vi <b>kraftigt anbefale</b> at du opgraderer "
+"det til den nyeste firmware, som fikser problemerne. Smut over til "
+"Indstillinger og find Firmware afdelingen for at installere opdateringen."
 
 #: gearimplementations/GearMitail.cpp:43
 msgctxt ""
@@ -816,11 +807,10 @@ msgid ""
 "updating to the newest firmware which fixes them! Head over to Settings and "
 "find the Firmware section to perform the update."
 msgstr ""
-"Din MiTail Mini har firmware version 4.0.3 installeret, hvilket er uddateret"
-" og har "
-"nogle kendte problemer! Vi vi <b>kraftigt anbefale</b> at du opgraderer det "
-"til den nyeste firmware, som fikser problemerne. Smut over til Indstillinger "
-"og find Firmware afdelingen for at installere opdateringen."
+"Din MiTail Mini har firmware version 4.0.3 installeret, hvilket er uddateret "
+"og har nogle kendte problemer! Vi vi <b>kraftigt anbefale</b> at du "
+"opgraderer det til den nyeste firmware, som fikser problemerne. Smut over "
+"til Indstillinger og find Firmware afdelingen for at installere opdateringen."
 
 #: gearimplementations/GearMitailMini.cpp:110
 msgctxt ""
@@ -831,10 +821,9 @@ msgid ""
 "device writing characteristic). If you are certain that it definitely is, "
 "please report this error to The Tail Company."
 msgstr ""
-"Det ser ud som om dette ikke er en MiTail Mini (kunne ikke finde enhedens"
-" primære "
-"skrivekarakteristik). Hvis du er sikker på det er, tag kontakt til The Tail "
-"Company med denne fejl."
+"Det ser ud som om dette ikke er en MiTail Mini (kunne ikke finde enhedens "
+"primære skrivekarakteristik). Hvis du er sikker på det er, tag kontakt til "
+"The Tail Company med denne fejl."
 
 #: gearimplementations/GearMitailMini.cpp:118
 msgctxt ""
@@ -845,10 +834,9 @@ msgid ""
 "device reading characteristic). If you are certain that it definitely is, "
 "please report this error to The Tail Company."
 msgstr ""
-"Det ser ud som om dette ikke er en MiTail Mini (kunne ikke finde enhedens"
-" primære "
-"læsekarakteristik). Hvis du er sikker på det er, tag kontakt til The Tail "
-"Company med denne fejl."
+"Det ser ud som om dette ikke er en MiTail Mini (kunne ikke finde enhedens "
+"primære læsekarakteristik). Hvis du er sikker på det er, tag kontakt til The "
+"Tail Company med denne fejl."
 
 #: gearimplementations/GearMitailMini.cpp:408
 msgctxt "Warning message when a fault occurred during a connection attempt"
@@ -856,8 +844,8 @@ msgid ""
 "An error occurred while connecting to your MiTail Mini (the main service "
 "object could not be created). If you feel this is in error, please try again!"
 msgstr ""
-"Det ser ud som om dette ikke er en MiTail Mini (kunne ikke skabe det primære  "
-"service objekt). Hvis du tror dette er en fejl, prøv igen!"
+"Det ser ud som om dette ikke er en MiTail Mini (kunne ikke skabe det "
+"primære  service objekt). Hvis du tror dette er en fejl, prøv igen!"
 
 #: gearimplementations/GearMitailMini.cpp:438
 msgctxt ""
@@ -866,9 +854,8 @@ msgid ""
 "An error occurred while connecting to your MiTail Mini (the battery service "
 "was not available). If you feel this is in error, please try again!"
 msgstr ""
-"Det ser ud som om dette ikke er en MiTail Mini (batteri informations servicen"
-" var "
-"ikke tilgængelig). Hvis du tror dette er en fejl, prøv igen!"
+"Det ser ud som om dette ikke er en MiTail Mini (batteri informations "
+"servicen var ikke tilgængelig). Hvis du tror dette er en fejl, prøv igen!"
 
 #: gearimplementations/GearMitailMini.cpp:488
 msgctxt ""
@@ -878,10 +865,9 @@ msgid ""
 "level characteristic). If you are certain that it definitely is, please "
 "report this error to The Tail Company."
 msgstr ""
-"Det ser ud som om dette ikke er en MiTail Mini (kunne ikke finde enhedens"
-" batteri "
-"karakteristik). Hvis du er sikker på det er, tag kontakt til The Tail "
-"Company med denne fejl."
+"Det ser ud som om dette ikke er en MiTail Mini (kunne ikke finde enhedens "
+"batteri karakteristik). Hvis du er sikker på det er, tag kontakt til The "
+"Tail Company med denne fejl."
 
 #: gearimplementations/GearMitailMini.cpp:528
 msgctxt "Warning that some unknown error happened"
@@ -889,9 +875,8 @@ msgid ""
 "An error occurred. If you are trying to connect to your MiTail Mini, make "
 "sure it is on and close to this device."
 msgstr ""
-"Der opstod en fejl. Hvis du er ved at forsøge at forbinde til din MiTail"
-" Mini, "
-"vær sikker på, at den er tændt og tæt på denne enhed."
+"Der opstod en fejl. Hvis du er ved at forsøge at forbinde til din MiTail "
+"Mini, vær sikker på, at den er tændt og tæt på denne enhed."
 
 #: gearimplementations/GearMitailMini.cpp:531
 msgctxt "Warning that the device disconnected itself"
@@ -906,8 +891,8 @@ msgid ""
 "Failed to connect to your MiTail Mini. Please try again (perhaps move it "
 "closer?)"
 msgstr ""
-"Kunne ikke forbinde til din MiTail Mini. Forsøg igen (måske skal den tættere"
-" på?)"
+"Kunne ikke forbinde til din MiTail Mini. Forsøg igen (måske skal den tættere "
+"på?)"
 
 #: gearimplementations/GearMitailMini.cpp:570
 msgctxt ""
@@ -917,9 +902,8 @@ msgid ""
 "The MiTail Mini closed the connection, either by being turned off or losing "
 "power. Remember to charge your gear!"
 msgstr ""
-"Din MiTail Mini lukkede forbindelsen, enten ved at blive slukket, eller ved"
-" at "
-"løbe tør for strøm. Husk at oplade din hale!"
+"Din MiTail Mini lukkede forbindelsen, enten ved at blive slukket, eller ved "
+"at løbe tør for strøm. Husk at oplade din hale!"
 
 #: GestureDetectorModel.cpp:273
 msgctxt "The name of a sensor"
@@ -1035,10 +1019,10 @@ msgid ""
 "after long periods of use. Read our guide to responsible wagging in Settings "
 "for ways to keep your gear healthy."
 msgstr ""
-"Afbrød %1 detektering efter en time. Alt animatronisk udstye har brug for en"
-" pause efter at have været i brug i lange uafbrudte perioder. Kig i vores"
-" Guide To Responsible Wagging i indstillingspanelet for nogle tips til at"
-" holde dit udstyr ved godt helbred."
+"Afbrød %1 detektering efter en time. Alt animatronisk udstye har brug for en "
+"pause efter at have været i brug i lange uafbrudte perioder. Kig i vores "
+"Guide To Responsible Wagging i indstillingspanelet for nogle tips til at "
+"holde dit udstyr ved godt helbred."
 
 #: qml/AboutPage.qml:33
 msgctxt ""
@@ -1925,10 +1909,9 @@ msgid ""
 "nearby devices. Clicking the button below will show you a dialog that you "
 "need to press allow on."
 msgstr ""
-"For at kunne finde dit udstyr er vi nødt til at have tilladelse til at se"
-" efter bluetooth enheder.. Når du kliker på knappen nedenunder vil du blive"
-" vist en "
-"dialog hvor du skal klikke på Tillad."
+"For at kunne finde dit udstyr er vi nødt til at have tilladelse til at se "
+"efter bluetooth enheder.. Når du kliker på knappen nedenunder vil du blive "
+"vist en dialog hvor du skal klikke på Tillad."
 
 #: qml/NotConnectedCard.qml:78
 msgctxt ""
@@ -2668,8 +2651,8 @@ msgstr "Vippereaktioner"
 msgctxt "Label for the checkbox for turning on Tilt Mode"
 msgid "Turn this on to make your gear react to tilting movements."
 msgstr ""
-"Tænd dette, så dit udstyr reagerer på når du vipper hovedet sidelæns eller"
-" frem og tilbage."
+"Tænd dette, så dit udstyr reagerer på når du vipper hovedet sidelæns eller "
+"frem og tilbage."
 
 #: qml/WelcomePage.qml:376
 msgctxt ""
